# PhonePhone

./: .clangd  CMakeLists.txt  LICENSE  README.md  main.cpp
Include/: time.h
Src/: commonElements.cpp  lockscreen.cpp  main.cpp  pin.cpp  shapes.cpp  styleManager.cpp  systemInfo.cpp  time.cpp  wallpaper.cpp
Src/screens/: lockscreen.cpp  setupScreen.cpp
continous/: settings.json
include/: commonElements.h  languages.h  lockscreen.h  pin.h  shapes.h  styleManager.h  systemInfo.h  time.h  wallpaper.h
include/screens/: lockscreen.h  setupScreen.h
kernel/include/: permissions.h  types.h
kernel/src/: permissions.cpp
styles/: circularButton.css  circularButtonTransparent.css
